# Brownian-Integral-Kernel

./: .gitignore  README.md  pyproject.toml
brownian_integral_kernel/: abla_im_std.py  abla_im_win.py  brown_int_kernel.py  brown_kernel.py  convert_data.py  data_generator.py  eval_hipe_pred_wae.py  eval_hipe_samples.py  eval_hipe_var.py  eval_im_pred.py  eval_im_pred_wae.py  eval_im_samples.py  eval_im_var.py  eval_netdata_pred.py  eval_netdata_pred_wae.py  eval_netdata_samples.py  eval_netdata_var.py  eval_stock_pred_wae.py  eval_stock_samples.py  eval_stock_var.py  exp_brown_distinction.py  exp_brown_distinction_hipedata.py  exp_brown_distinction_im_std.py  exp_brown_distinction_netdata.py  exp_brown_distinction_stockdata.py  integral_kernel.py  integrated_data.csv  rbfi_kernel.py  utils.py  vis_brown_Intro_graphic.py  vis_brown_distinction.py  vis_brown_distinction_hipedata.py  vis_brown_distinction_netdata.py  vis_brown_distinction_realdata.py  vis_hipedata.py
brownian_integral_kernel/HIPE/: data_link.txt
brownian_integral_kernel/LP/: LP_H_1Erw_1Ki_mB_15-21_03_21_1.csv  LP_H_1Erw_1Ki_mB_15-21_03_21_2.csv  LP_H_1Erw_2Ki_wB_15-21_03_21_1.csv  LP_H_1Erw_2Ki_wB_15-21_03_21_2.csv  LP_H_2Erw_2Ki_wkB_mB_15-21_03_21_2.csv  LP_H_2Erw_2Ki_wkB_mB_15-21_03_21_3.csv  LP_H_2Erw_2R_15-21_03_21_1.csv  LP_H_2Erw_2R_15-21_03_21_2.csv  LP_H_2Erw_3Ki_wB_mB_15-21_03_21_1.csv  LP_H_2Erw_3Ki_wB_mB_15-21_03_21_2.csv  LP_H_2Erw_3Ki_wB_mB_15-21_03_21_3.csv  LP_H_2Erw_3Ki_wB_mB_15-21_03_21_4.csv  LP_H_2Erw_wB_mB_15-21_03_21_1.csv  LP_H_2Erw_wB_mB_15-21_03_21_2.csv  (+2 more)
